# cppfront_study_with_cmake

./: .gitmodules  CMakeLists.txt
cmake/: cppfront.cmake
src/: decorate.cpp2  decorate.hpp  main.cpp2
